[package]
name = "rs_llvm_macro"
version = "0.0.0"
authors = ["NightProg"]
description = "internal macro for rs_llvm"
keywords = ["internal", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.48", features = ["extra-traits", "derive", "full"] }

